--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"Hello, World! Tis I, Abdullah" 
+<!DOCTYPE html>
+<html>
+<head>
+<title>Abdullah's Most Awesome Website</title>
+</head>
+<body>
+
+<!-- <p>This is a paragraph.</p> -->
+This is pretty neat, eh! I should probably get back to studying.
+
+</body>
+</html>
