Added some ASCII art and centred stuff.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Abdullah's Most Awesome Website</title>
+  <meta charset="UTF-8">
+  <title>Abdullah's Most Awesome Website</title>
+  <style>
+    pre {
+      width: fit-content;
+      margin: 2em auto;
+      text-align: left;
+      font-family: monospace;
+    }
+  </style>
 </head>
 <body>
 
-<!-- <p>This is a paragraph.</p> -->
-This is pretty neat, eh! I should probably get back to studying.
+  <p style="text-align: center;">
+    Welcome to Abdullah's amazing website.
+  </p>
+
+  <pre><code>
+      .o.        .o8             .o8              oooo  oooo            oooo        
+     .888.      "888            "888              `888  `888            `888        
+    .8"888.      888oooo.   .oooo888  oooo  oooo   888   888   .oooo.    888 .oo.   
+   .8' `888.     d88' `88b d88' `888  `888  `888   888   888  `P  )88b   888P"Y88b  
+  .88ooo8888.    888   888 888   888   888   888   888   888   .oP"888   888   888  
+ .8'     `888.   888   888 888   888   888   888   888   888  d8(  888   888   888  
+o88o     o8888o  `Y8bod8P' `Y8bod88P"  `V88V"V8P' o888o o888o `Y888""8o o888o o888o
+  </code></pre>
 
 </body>
 </html>
