added an icon (the letter 'ain')

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Abdullah's Most Awesome Website</title>
+  <link rel="icon" href="ain.png" type="image/png">
   <style>
     pre {
       width: fit-content;
