Centered the ASCII art and added mouse effect

--- a/index.html
+++ b/index.html
@@ -2,24 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Abdullah's Most Awesome Website</title>
-  <link rel="icon" href="ain.png" type="image/png">
+  <title>Mouse Trail with Background ASCII</title>
   <style>
-    pre {
-      width: fit-content;
-      margin: 2em auto;
-      text-align: left;
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      height: 100%;
+      background: #fff;
+    }
+
+    /* ASCII background text */
+    .ascii-background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      width: 100%;
+      height: 100%;
+      color: rgba(0, 0, 0, 0.1); /* faint text */
       font-family: monospace;
+      white-space: pre;
+      pointer-events: none; /* allow mouse through it */
+      user-select: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    /* Canvas on top of background */
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
     }
   </style>
 </head>
 <body>
-
-  <p style="text-align: center;">
-    Welcome to Abdullah's amazing website.
-  </p>
-
-  <pre><code>
+  <!-- ASCII Art Background -->
+  <div class="ascii-background">
+    <pre><code>
       .o.        .o8             .o8              oooo  oooo            oooo        
      .888.      "888            "888              `888  `888            `888        
     .8"888.      888oooo.   .oooo888  oooo  oooo   888   888   .oooo.    888 .oo.   
@@ -27,7 +51,11 @@
   .88ooo8888.    888   888 888   888   888   888   888   888   .oP"888   888   888  
  .8'     `888.   888   888 888   888   888   888   888   888  d8(  888   888   888  
 o88o     o8888o  `Y8bod8P' `Y8bod88P"  `V88V"V8P' o888o o888o `Y888""8o o888o o888o
-  </code></pre>
+    </code></pre>
+  </div>
+
+  <canvas id="drawCanvas"></canvas>
+  <script src="script.js"></script>
 
 </body>
 </html>
