--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mouse Trail with Background ASCII</title>
+  <title>Abdullah's Website</title>
+  <link rel="icon" href="ain.ico" type="image/x-icon">
   <style>
     html, body {
       margin: 0;
@@ -20,7 +21,7 @@
       z-index: 1;
       width: 100%;
       height: 100%;
-      color: rgba(0, 0, 0, 0.1); /* faint text */
+      color: rgba(0, 0, 0, 0.5); /* faint text */
       font-family: monospace;
       white-space: pre;
       pointer-events: none; /* allow mouse through it */
