Added changing colours and new icon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Abdullah's Website</title>
-  <link rel="icon" href="ain.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="ain.png" type="image/png" sizes="512x512" />
   <style>
     html, body {
       margin: 0;
@@ -38,12 +39,13 @@
       top: 0;
       left: 0;
       z-index: 0;
+      cursor: none;
     }
   </style>
 </head>
 <body>
   <!-- ASCII Art Background -->
-  <div class="ascii-background">
+  <div id="ascii" class="ascii-background">
     <pre><code>
       .o.        .o8             .o8              oooo  oooo            oooo        
      .888.      "888            "888              `888  `888            `888        
