--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Abdullah's Website</title>
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="ain.png" type="image/png" sizes="512x512" />
+  <link rel="icon" href="favicon.png" type="image/png" sizes="64x64">
   <style>
     html, body {
       margin: 0;
