--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Abdullah's Website</title>
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="icon" href="favicon.png" type="image/png" sizes="64x64">
   <style>
-    html, body {
+    html,
+    body {
       margin: 0;
       padding: 0;
       overflow: hidden;
@@ -22,10 +24,12 @@
       z-index: 1;
       width: 100%;
       height: 100%;
-      color: rgba(0, 0, 0, 0.5); /* faint text */
+      color: rgba(0, 0, 0, 0.5);
+      /* faint text */
       font-family: monospace;
       white-space: pre;
-      pointer-events: none; /* allow mouse through it */
+      pointer-events: none;
+      /* allow mouse through it */
       user-select: none;
       display: flex;
       align-items: center;
@@ -43,6 +47,7 @@
     }
   </style>
 </head>
+
 <body>
   <!-- ASCII Art Background -->
   <div id="ascii" class="ascii-background">
@@ -61,4 +66,5 @@ o88o     o8888o  `Y8bod8P' `Y8bod88P"  `V88V"V8P' o888o o888o `Y888""8o o888o o8
   <script src="script.js"></script>
 
 </body>
+
 </html>
